--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build on EAS
-        run: eas build --profile preview --platform android
+        run: eas build --profile preview --platform android --non-interactive
