--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.3",
-    "expo-file-system": "~15.4.5"
+    "expo-file-system": "~15.4.5",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
