--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,10 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env":  {
+        "EXPO_PUBLIC_API_URL": "https://photographersekb.ru:8080/api"
+      }
     },
     "production": {}
   },
